--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+  background-color: red;
+  background-size: 100%;
+}
+
 #main_background {
   display: block;
   margin-left: auto;
@@ -5,7 +10,45 @@
   margin-top: 10%;
 }
 
-body{
+#social_media{
+  text-align: center;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  color: yellow;
+}
+
+.fa:hover {
+  opacity: 0.7;
+  color:yellow;
+  text-decoration:none;
+}
+
+#dead_line_btn{
+  color: yellow;
   background-color: red;
-  background-size: 100%;
+  border-color: yellow;
+
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+#dead_line_btn:hover{
+  color:red;
+  background-color: yellow;
+  border-color: red;
+}
+
+
+#dead_line_container{
+  position: absolute;
+  bottom: 60px;
+  right: 10px;
+  color:yellow;
 }
